@@ -3,6 +3,10 @@ Change log for duff
 
 Maintained since version 0.3.1.
 
+2012-01-25  Camilla Berglund  <elmindreda@elmindreda.org>
+
+ * duffdriver.c (process_file): Removed read permission check.
+
 2012-01-24  Camilla Berglund  <elmindreda@elmindreda.org>
 
  * duff.h (HASH_BITS): Increased to 10.
